[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "store"
version = "0.0.1"
authors = [
  { name="Federico Tarascio", email="fe.tarascio@gmail.com" },
]
description = "Stores haemodialysis analysis data."
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
